k8s/BackendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: omarismail0/kubernetes-project:backend5
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /data
              name: node-app-storage
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: node-app-storage
          persistentVolumeClaim:
            claimName: node-app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: node-app
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30020
  selector:
    app: node-app
