k8s/PortServiceIngress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-forward
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30088 # Maps to external port 8088
    - name: node
      protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30089 # Maps to external port 8089
