k8s/BackendIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-localhost
  namespace: default # Change if needed
  annotations:
    kubernetes.io/ingress.class: node-app
spec:
  rules:
    - host: server.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app
                port:
                  number: 8089
