k8s/FrontendIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-localhost
  namespace: default # Change if needed
  annotations:
    kubernetes.io/ingress.class: frontend-app
spec:
  rules:
    - host: front.localdev.me:8090
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
